Finally fix the dodgey spacing with blog posts

--- a/PersonalWebsite/Styles/_site-blogs.scss
+++ b/PersonalWebsite/Styles/_site-blogs.scss
@@ -62,6 +62,7 @@ code {
 
 article.blog {
     $CHARS_PER_LINE: 80;
+    $GENERIC_MARGIN_BOTTOM: 2rem;
 
     display: flex;
     flex-direction: column;
@@ -71,6 +72,12 @@ article.blog {
     font-size: 20px;
     line-height: 1.8em;
 
+    // Currently, margins between tags are all over the place, so I'm putting this here so I can set a baseline to further fine-tune from.
+    * {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
     img {
         max-width: 100%;
     }
@@ -79,6 +86,7 @@ article.blog {
         font-size: 38px;
         align-self: center;
         margin-bottom: 0.2em;
+        margin-top: 1em;
     }
 
     div.metadata {
@@ -96,22 +104,47 @@ article.blog {
 
     h2 {
         font-size: 32px;
-        margin-bottom: 0.2em;
+        margin-bottom: $GENERIC_MARGIN_BOTTOM;
+    }
+
+    h3 {
+        margin-bottom: $GENERIC_MARGIN_BOTTOM / 4;
     }
 
     p {
         width: 1ch * $CHARS_PER_LINE;
         max-width: 95vw;
+        margin-bottom: $GENERIC_MARGIN_BOTTOM;
     }
 
-    ul,
-    ol {
-        margin-top: 0em;
+    // Margin between header and first paragraph
+    > p:first-of-type {
+        margin-top: 1em;
     }
 
-    p ~ ul,
-    p ~ ol {
-        margin-top: -0.6em;
+    li {
+        > p {
+            margin-bottom: 0;
+            margin-top: 0;
+        }
+
+        margin-bottom: $GENERIC_MARGIN_BOTTOM / 2;
+
+        &:last-of-type {
+            margin-bottom: 0; // Don't add onto the final overall margin
+        }
+    }
+
+    ul, ol {
+        margin-bottom: $GENERIC_MARGIN_BOTTOM;
+    }
+
+    p + ul, p + ol {
+        margin-top: -$GENERIC_MARGIN_BOTTOM * 0.6;
+    }
+
+    pre {
+        margin-bottom: $GENERIC_MARGIN_BOTTOM;
     }
 
     pre > code {
